--- a/README
+++ b/README
@@ -14,6 +14,6 @@ paste in the contents of the falstad.txt file.
 
 http://www.falstad.com/circuit/circuitjs.html
 
-![Simulation Screenshot](sim.png?raw=true "Simulation Screenshot")
+![Simulation Screenshot](https://github.com/aaronkondziela/triangle-to-sine-ICL8038/raw/master/sim.png "Simulation Screenshot")
 
 My files are released into the public domain.
